--- a/CatRent/Wpf.CatRent/Wpf.CatRent.csproj
+++ b/CatRent/Wpf.CatRent/Wpf.CatRent.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.13">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CatRenta.Application\CatRenta.Application.csproj" />
   </ItemGroup>
 
