--- a/CatRent/Wpf.CatRent/Wpf.CatRent.csproj
+++ b/CatRent/Wpf.CatRent/Wpf.CatRent.csproj
@@ -11,10 +11,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="System.Drawing.Common" Version="4.7.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CatRenta.Application\CatRenta.Application.csproj" />
+    <ProjectReference Include="..\CatRenta.Infrastructure\CatRenta.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
